[package]
name = "werd"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.202", features = ["derive"] }
toml = "0.8.13"
dirs = { version = "5.0.1" }
thiserror = { version = "1.0.9" }
strum = { version = "0.26.3", features = ["derive"] }
